logs/Slang/generated/hdlconv/hdlconvertor_p193_2.sv.log
name: hdlconvertor_p193_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p193_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p193_2.sv:1:1: error: language feature not yet supported
class C #(int p = 1, type T = int);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p193_2.sv:4:10: error: 'C' recursively depends on its own definition
function C::T C::f();
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p193_2.sv:4:15: note: declared here
function C::T C::f();
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p193_2.sv:5:8: error: use of undeclared identifier 'p'
return p + C::p;
       ^
